# irprinter

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: basic-ci.yml
cmake/: ToolchainOptions.cmake
cmake/modules/: clang-format.cmake  clang-tidy.cmake  log-util.cmake  target-util.cmake
include/: Util.h
include/printer/: IRNodeFinder.h  LLVMTool.h
src/: CMakeLists.txt  main.cpp
src/printer/: CMakeLists.txt  IRNodeFinder.cpp  LLVMTool.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/codes/: decl.cpp  demangle.cpp  dump.cpp  errors.cpp  flags.cpp  generate.cpp  list.cpp  list_all.cpp  location.cpp  location_line_prefix.cpp  opt_flag.cpp  quit.cpp  test.c
